tests/integration/pilot/test_artifacts/pilot-f119641b99704107b0cfca0c6/TestTraffic/serverfirst/auto-tcp-server:ISTIO_MUTUAL/DISABLE/_test_context/DestinationRule-PeerAuthentication.1388773568.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: c
  namespace: echo-2-60257
spec:
  host: c
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: c
  namespace: echo-2-60257
spec:
  mtls:
    mode: DISABLE
  selector:
    matchLabels:
      app: c
